# torrent-client

./: .gitignore  Cargo.toml  README.md  your_bittorrent.sh
src/: backup.rs  bencode.rs  download.rs  download_tasks.rs  logger.rs  main.rs  peers.rs  saver.rs  torrent.rs  tracker.rs
src/download/: mod.rs
src/engine/: backup.rs  bencode.rs  lib.rs  logger.rs  mod.rs  peers.rs  saver.rs  torrent.rs  tracker.rs  tracker_sync.rs
src/engine/download/: mod.rs  tasks.rs
src/gui/: bottom_panel.rs  central_panel.rs  download_table.rs  files_tree.rs  main.rs  mod.rs  top_panel.rs  torrent_actions.rs  torrent_import.rs
