[package]
name = "torrent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.33"
console-subscriber = "0.2.0"
hex = "0.4.3"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.105"                                           
serde_urlencoded = "0.7.1"                  
sha1 = "0.10.1"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
