[package]
name = "torrent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
async-recursion = "1.0.5"
bincode = "1.3.3"
chrono = "0.4.33"
console-subscriber = "0.2.0"
dirs = "5.0.1"
eframe = "0.26.2"
egui = { version = "0.26.2", features = ["default"] }
egui_extras = { version = "0.26.2", features = ["default"] }
fs2 = "0.4.3"
hex = "0.4.3"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
rfd = "0.14.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.105"                                           
serde_urlencoded = "0.7.1"                  
sha1 = "0.10.1"
tokio = { features = ["full", "tracing"] }
tokio-util = "0.7.10"
